--- a/Readme
+++ b/Readme
@@ -1,1 +1,3 @@
 An application to reflect on yourself.
+
+Seting up a remote branch:git remote set-url origin https://github.com/spurthym/Reflections-Social-App.git
